fix: Stats client call logging